@@ -91,32 +91,32 @@ static struct cmdstruct commands[] = {
  { N_("cancel"),     cancelcmd,     _("cancel job=nnn -- cancel a job")},
  { N_("create"),     createcmd,     _("create DB Pool from resource")},  
  { N_("delete"),     delete_cmd,    _("delete [pool=<pool-name> | media volume=<volume-name>]")},    
+ { N_("estimate"),   estimate_cmd,  _("performs FileSet estimate debug=1 give full listing")},
+ { N_("exit"),       quit_cmd,      _("exit = quit")},
  { N_("help"),       help_cmd,      _("print this command")},
  { N_("label"),      labelcmd,      _("label a tape")},
- { N_("relabel"),    relabelcmd,    _("relabel a tape")},
  { N_("list"),       listcmd,       _("list [pools | jobs | jobtotals | media <pool> | files job=<nn>]; from catalog")},
  { N_("llist"),      llistcmd,      _("full or long list like list command")},
  { N_("messages"),   messagescmd,   _("messages")},
  { N_("mount"),      mount_cmd,     _("mount <storage-name>")},
- { N_("restore"),    restorecmd,    _("restore files")},
  { N_("prune"),      prunecmd,      _("prune expired records from catalog")},
  { N_("purge"),      purgecmd,      _("purge records from catalog")},
+ { N_("query"),      querycmd,      _("query catalog")},
+ { N_("quit"),       quit_cmd,      _("quit")},
+ { N_("relabel"),    relabelcmd,    _("relabel a tape")},
+ { N_("release"),    release_cmd,   _("release <storage-name>")},
+ { N_("restore"),    restorecmd,    _("restore files")},
  { N_("run"),        runcmd,        _("run <job-name>")},
  { N_("setdebug"),   setdebug_cmd,  _("sets debug level")},
- { N_("estimate"),   estimate_cmd,  _("performs FileSet estimate debug=1 give full listing")},
- { N_("var"),        var_cmd,       _("does variable expansion")},
  { N_("show"),       show_cmd,      _("show (resource records) [jobs | pools | ... | all]")},
  { N_("sqlquery"),   sqlquerycmd,   _("use SQL to query catalog")}, 
  { N_("status"),     statuscmd,     _("status [storage | client]=<name>")},
+ { N_("time"),       time_cmd,      _("print current time")},
  { N_("unmount"),    unmount_cmd,   _("unmount <storage-name>")},
  { N_("update"),     update_cmd,    _("update Volume or Pool")},
  { N_("use"),        use_cmd,       _("use catalog xxx")},
+ { N_("var"),        var_cmd,       _("does variable expansion")},
  { N_("version"),    version_cmd,   _("print Director version")},
- { N_("quit"),       quit_cmd,      _("quit")},
- { N_("query"),      querycmd,      _("query catalog")},
- { N_("release"),    release_cmd,   _("release <storage-name>")},
- { N_("time"),       time_cmd,      _("print current time")},
- { N_("exit"),       quit_cmd,      _("exit = quit")},
  { N_("wait"),       wait_cmd,      _("wait until no jobs are running")},
 	     };
 #define comsize (sizeof(commands)/sizeof(struct cmdstruct))
